<resources>
    <string name="app_name">Materialism</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="access_camera">Access Camera</string>
    <string name="take_photo">Take Photo</string>
    <string name="history">History</string>
    <string name="title_activity_design_main_page">DesignMainPageActivity</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="title_activity_add_subcategory">AddSubcategoryActivity</string>
    <string name="title_activity_view_categories">ViewCategoriesActivity</string>
    <string name="title_activity_view_items">ViewItemsActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_view_friends">ViewFriendsActivity</string>
    <string name="title_activity_support">SupportActivity</string>
    <string name="title_activity_add_friends">AddFriendsActivity</string>
    <string name="title_activity_request_page">RequestActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_view_friend_profile">ViewFriendProfileActivity</string>
    <string name="flag">Flag</string>
    <string name="people">People</string>
    <string name="item_name">Item name</string>
    <string name="home">Home</string>
    <string name="item_description">Item description</string>
    <string name="library">Library</string>
    <string name="item_cancel">Cancel</string>
    <string name="item_delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="level">Level</string>
    <string name="item_picture">Item picture</string>
    <string name="library_of_items">Library</string>
    <string name="menu">Menu</string>
    <string name="selected_photo">Selected photo from phone gallery</string>
    <string name="select_picture">Select picture</string>
    <string name="name_hint">Name:</string>
    <string name="description_hint">Description:</string>
    <string name="category_hint">Category:</string>
    <string name="private_label">Item is private?</string>
    <string name="private_yes">Yes</string>
    <string name="private_no">No</string>
    <string name="library_icon_desc">Open Library</string>
    <string name="add_item">Add item</string>
    <string name="back">Back</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_support">Support</string>
    <string name="nav_logout">Logout</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="send">Send</string>
    <string name="title_activity_profile_page">Profile Page</string>
    <string name="profile_picture_desc">Profile picture</string>
    <string name="edit_name_desc">Edit name</string>
    <string name="edit_email_desc">Edit email</string>
    <string name="edit_location_desc">Edit location</string>

    <!-- Categories Array -->
    <string-array name="categories_array">
        <item>Category 1</item>
        <item>Category 2</item>
        <item>Category 3</item>
        <item>Category 4</item>
        <item>Category 5</item>
    </string-array>

    <!-- Sort Options Array -->
    <string name="menu_icon_desc">Menu icon</string>
    <string name="search_icon_desc">Search icon</string>
    <string name="item_image_desc">Item image</string>
    <string-array name="sort_options">
        <item>Category</item>
        <item>Alphabetic order</item>
        <item>Descending order</item>
    </string-array>
    <string name="add_item_activity">AddItemActivity</string>
    <string name="take_picture">Take picture</string>
    <string name="location_hint">Location:</string>
    <string name="edit_item">Edit item</string>
    <string name="add_category_hint">Category name:</string>
    <string name="add_subcategory_hint">Subcategory name:</string>
</resources>